Fix spec for class response
